# quality-screener-mcp-server

./: CLAUDE.md  Dockerfile  LICENSE  PRIVACY.md  PUBLISHING.md  README.md  pyproject.toml  server.json
qscreener_mcp/: __init__.py  client.py  oauth.py  server.py
tests/: test_config_normalization.py  test_slim_rows.py  test_token_resolution.py  test_tool_filters.py
