[project]
name = "qscreener-mcp"
version = "0.1.0"
description = "Standalone MCP server exposing the qscreener screener operations as tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    # httpx is a transitive dependency of mcp, but listed explicitly so the
    # version constraint is clear and the dependency is visible.
    "httpx>=0.27",
]

[project.scripts]
qscreener-mcp = "qscreener_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qscreener_mcp"]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
